@@ -1,4 +1,4 @@
-/* Copyright (C) 2000-2013 Free Software Foundation, Inc.
+/* Copyright (C) 2000-2014 Free Software Foundation, Inc.
    Contributed by Denis Joseph Barrow (djbarrow@de.ibm.com).
    This file is part of the GNU C Library.
 
@@ -65,7 +65,9 @@ typedef struct
   } fpregset_t;
 
 /* Bit is set if the uc_high_gprs field contains the upper halfs of
-   the 64 bit general purpose registers.  */
+   the 64 bit general purpose registers.  Since the uc_high_gprs field
+   is only available in the 32 bit version of ucontext_t it will never
+   be set for 64 bit.  */
 #define UCONTEXT_UC_FLAGS_HIGH_GPRS (1UL << 0)
 
 /* A new uc_flags constant will be defined when actually making use of
@@ -88,7 +90,9 @@ struct ucontext
     stack_t uc_stack;
     mcontext_t uc_mcontext;
     __sigset_t uc_sigmask;
+#ifndef __s390x__
     unsigned long uc_high_gprs[16];
+#endif
     char __reserved[512];
   };
 
